# traktor-s4-mk1-midify

./: .gitignore  LICENSE  README.md  alsa-control-map.csv  evcode-type-map.csv  midi-evcode-map-deck.csv  midi-evcode-map-mixer-effect.csv  midify.py  pyproject.toml  requirements.txt  setup.py
doc/: amixer_controls.tsv  mappings.ods
traktor_s4_mk1_midify/: evcode-type-map.csv  midi-alsa-control-map.csv  midi-evcode-map-deck.csv  midi-evcode-map-mixer-effect.csv  midify.py
