[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.7.1,<4"]

[project]
name = "traktor_s4_mk1_midify"
version = "0.3.0"
authors = [
  { name="Conal Moloney", email="blaxpot@blax.site" },
]
description = "Get MIDI signals from a Traktor S4 mk1 DJ controller under Linux"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
  "evdev==1.4.0",
  "python-rtmidi==1.4.9",
]

[project.scripts]
traktor-s4-mk1-midify = "traktor_s4_mk1_midify.midify:midify"
traktor-s4-mk1-print-events= "traktor_s4_mk1_midify.midify:print_events"

[project.urls]
"Homepaage" = "https://github.com/blaxpot/traktor-s4-mk1-midify"
"Bug Tracker" = "https://github.com/blaxpot/traktor-s4-mk1-midify/issues"

[tool.black]
line-length = 120

